# cat-meme-locomotion

./: .gitignore  CLEANUP_SUMMARY.md  CODE_EXPLANATION_JP.md  MP4_SUPPORT_SUMMARY.md  Makefile  README.md  TEST_RESULTS.md  genesis_best_practices.md  genesis_robot_examples.py  go2.urdf  go2_fixed.urdf  pyproject.toml  test_detection_quality.py  test_joint_movement.py  test_unitree.py
assets/models/spot/: spot.urdf
outputs/: motion_report.txt
src/cat_meme_locomotion/: __init__.py  cli.py  main.py  motion_extractor.py  unitree_3d.py  unitree_3d_final.py  unitree_3d_improved.py  unitree_cv_pose_controller.py  unitree_dlc_controller.py  unitree_genesis_official.py  unitree_ik_simple.py  unitree_yolo_controller.py
src/cat_meme_locomotion/core/: __init__.py  cv_animal_pose_extractor.py  dlc_pose_extractor.py  improved_yolo_pose_extractor.py  inverse_kinematics.py  motion_extractor.py  simple_yolo_pose_extractor.py  tracking_visualizer.py  yolo_pose_extractor.py
src/cat_meme_locomotion/utils/: __init__.py  gif_loader.py
